RESOLVED FIXED190470
[GStreamer] Fix race condition in GStreamerVideoDecoder
https://bugs.webkit.org/show_bug.cgi?id=190470
Summary [GStreamer] Fix race condition in GStreamerVideoDecoder
Thibault Saunier
Reported 2018-10-11 08:21:34 PDT
[GStreamer] Fix race condition in GStreamerVideoDecoder
Attachments
Patch (3.69 KB, patch)
2018-10-11 08:23 PDT, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2018-10-11 08:23:20 PDT
WebKit Commit Bot
Comment 2 2018-10-11 10:29:38 PDT
Comment on attachment 352044 [details] Patch Clearing flags on attachment: 352044 Committed r237036: <https://trac.webkit.org/changeset/237036>
WebKit Commit Bot
Comment 3 2018-10-11 10:29:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-10-11 10:31:32 PDT
Note You need to log in before you can comment on or make changes to this bug.