[GStreamer] Fix race condition in GStreamerVideoDecoder https://bugs.webkit.org/show_bug.cgi?id=190470

The GStreamerVideoDecoder.m_dtsPtsMap filed is accessed from
the main thread and some GStreamer streaming thread, make sure
to protect its access.

And use WTF::StdMap instead of std::map.

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-10-11
Reviewed by Philippe Normand.

Manually tested and a random crash is gone.

* platform/mediastream/libwebrtc/GStreamerVideoDecoderFactory.cpp:
(WebCore::GStreamerVideoDecoder::newSampleCallback):

Canonical link: https://commits.webkit.org/205413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237036 268f45cc-cd09-0410-ab3c-d52691b4dbfc